@@ -1,3 +1,8 @@
+2008-11-14 [colin]	1.0.9cvs1
+
+	* src/att_remover.c
+		Sync with core
+
 2008-10-03 [paul]	1.0.9
 
 	1.0.9 released
